--- a/Micro/HW7/PS7.tex
+++ b/Micro/HW7/PS7.tex
@@ -191,7 +191,7 @@
         \mu_2(t_c|L) = \frac{5}{11} \\
         \sigma_2(T|R) = \frac{1}{6} \\
         \sigma_2(U|L) = 1 \\
-      \end{gather*}
+      \end{}
   \section*{Question 4}
     \subsection*{Problem}
       Consider the following extensive form game of imperfect information played by three venture capital firms $i \in \{1, 2, 3\}$. The game takes place in five periods $t \in \{0, 1, 2, 3, 4\}$ and proceeds as follows.
