--- a/Sem2/Macro/PSets/PS1/PS1.tex
+++ b/Sem2/Macro/PSets/PS1/PS1.tex
@@ -91,6 +91,9 @@
       Assume $r=0$ and $y_t=y$ for all $t$. Solve for optimal consumption $c_t$ for cases described in parts 3 and 4 of the problem. What is the difference between the solutions in the two cases. Provide intuition. 
   \subsection*{Solution}
     \subsubsection*{1.}
+    \begin{gather*}
+      {\max\atop{c_t,a_{t+1}}}\sum\limits_{t=0}^T \log(c_t) \\
+       
     \subsubsection*{2.}
     \subsubsection*{3.}
     \subsubsection*{4.}
