--- a/Sem2/Micro/PSets/PS1/PS1.tex
+++ b/Sem2/Micro/PSets/PS1/PS1.tex
@@ -1,13 +1,10 @@
-%% ECON 8041 - Macro: Problem Set 4 %%
+%% ECON 8041 %%
 \documentclass[10pt, a4paper]{article}
 \usepackage[top=3cm, bottom=4cm, left=3.5cm, right=3.5cm]{geometry}
 \usepackage{amsmath, amsthm, amsfonts, amssymb, amscd, fancyhdr, color, comment, graphicx, environ}
 \usepackage{float}
 \usepackage{mathtools}
 \usepackage{mathrsfs}
-\usepackage[math-style=ISO]{unicode-math}
-\usepackage{lastpage}
-\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\course}{ECON - 8040}
 \newcommand{\hwnumber}{1}
 \newcommand{\Information}{Tate Mason}
@@ -17,8 +14,6 @@
 \fancyhead[L]{\course}
 \fancyhead[C]{Assignment \hwnumber}
 \fancyhead[R]{\Information}
-\fancyfoot[C]{\thepage\ of \pageref{LastPage}}
-
 \begin{document}
 
 \begin{center}
