--- a/Sem2/Micro/PSets/PS1/PS1.tex
+++ b/Sem2/Micro/PSets/PS1/PS1.tex
@@ -65,7 +65,7 @@ where $X(\theta) = \{x \in \mathbb{R}^n | g_j(x) \leq \theta_j\}$.
   \subsection*{(a)}
     Using the envelope theorem on the optimization problem:
     \begin{gather*}
-      V(\theta)={\max\atop{x\in\mathcal{X}}}f(x,\theta) \\
+      V(\theta)=\max_{x\in\mathcal{X}} f(x,\theta) \\
       \text{where} X(\theta) = \{x\in\mathbb{R}^n|g_j(x)\leq\theta_j\} \\
     \end{gather*}
     \begin{proof}
