--- a/Sem2/Micro/PSets/PS1/PS1.tex
+++ b/Sem2/Micro/PSets/PS1/PS1.tex
@@ -18,9 +18,8 @@
 
 \begin{center}
     \Large \textbf{Assignment \hwnumber} \\
+    \Large \textbf{\Information} \\
     \normalsize Due Date: January 23rd, 11:59pm \\
-    Please Show Your Work and Circle Your Final Answer \\
-    Submit as a single document
 \end{center}
 
 \section*{Question 1: Envelope Theorem}
@@ -92,5 +91,8 @@ where $X(\theta) = \{x \in \mathbb{R}^n | g_j(x) \leq \theta_j\}$.
       constraint with respect to $\theta_j$.
     \end{proof}
   \subsection*{(b)}
-    
+    The result in part (a) is interpreted as the derivative of the value function with respect to the constraint $\theta_j$ is equal to the
+    derivative of the objective function with respect to $\theta_j$ plus the derivative of the constraint with respect to $\theta_j$ times the
+    Lagrange multiplier. This is interpreted as the marginal change in the value function with respect to a change in the constraint $\theta_j$.
+    The KKT multipliers are interpreted as the marginal change in the value function with respect to a change in the constraint $\theta_j$.
 \end{document}
