--- a/Sem2/Metrics/PSets/PS1.qmd
+++ b/Sem2/Metrics/PSets/PS1.qmd
@@ -1,8 +1,10 @@
 ---
-Title: Problem Set 1
-Author: Tate Mason
-format: html
+title: "Problem Set 1"
+author: "Tate Mason"
 date: 01-22-2025
+format: 
+    html:
+        html-math-method: katex
 ---
 
 # Problem 1:
@@ -16,6 +18,7 @@ str_length(x)
 
 # Problem 2:
 Try three approaches to calculate the sum of the numbers 1 to $n$
+
 ## Approach 1:
 ```{r}
 sum_one_to_n_1 <- function(n) {
@@ -89,17 +92,17 @@ Write a function which takes `x` as an argument and returns `TRUE` if prime or `
 ## Part A:
 Counting observations in `Iris`
 ```{r}
-iris
 length(iris)
 ```
 
 ## Part B:
+Finding the mean sepal length in the dataset
 ```{r}
 mean(iris$Sepal.Length)
 ```
 
 ## Part C:
-Calculate the average of the variable `Sepal.Width`
+Calculate the average of the variable `Sepal.Width`. Package `dplyr` used but loading now shown.
 ```{r include=FALSE}
 library(dplyr)
 ```
