--- a/Sem2/Metrics/PSets/PS1.qmd
+++ b/Sem2/Metrics/PSets/PS1.qmd
@@ -109,8 +109,22 @@ print(c(a1,a2))
 Write a function to list all prime numbers 1-n
 ```{r}
 prime <- function(n) {
-
+    if (n>=2) {
+        x = seq(2,n)
+        primes = c()
+        for (i in seq(2,n)) {
+            if (any(x == i)) {
+                primes = c(primes, i)
+                x = c(x[(x %% i) != 0], i)
+            }
+        }
+        return(primes)
+    }
+    else {
+        return("Input should be at least 2")
+    }
 }
+prime(100)
 ```
 
 # Problem 5:
